--- a/Template/default/pattern/admin/simple/list.category.twig
+++ b/Template/default/pattern/admin/simple/list.category.twig
@@ -24,8 +24,8 @@
         <tr>
           <td class="category_type_id"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{category_id}':category.category_type_id}) }}">{{ '%03d'|format(category.category_type_id) }}</a></td>
           <td class="category_type_name"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{category_id}':category.category_type_id}) }}">{{ category.category_type_name }}</a></td>
-          <td class="category_type_name translated">{{ category.category_type_name|humanize }} &rArr; {{ category.category_type_name|humanize|trans }}</td>
-          <td class="category_type_access">{{ category.category_type_access|trans }}</td>
+          <td class="category_type_name translated">{{ category.category_type_name }} &rArr; {{ category.category_type_name|humanize|trans }}</td>
+          <td class="category_type_access">{{ category.category_type_access|humanize|trans }}</td>
           <td class="category_type_description">{{ category.category_type_description }}</td>
           <td class="category_type_description translated">{{ category.category_type_description|trans }}</td>            
         </tr>
