--- a/Template/default/pattern/admin/simple/list.tag.twig
+++ b/Template/default/pattern/admin/simple/list.tag.twig
@@ -23,7 +23,7 @@
         <tr>
           <td class="tag_type_id"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{tag_id}':tag.tag_type_id}) }}">{{ '%03d'|format(tag.tag_type_id) }}</a></td>
           <td class="tag_name"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{tag_id}':tag.tag_type_id}) }}">{{ tag.tag_name|upper }}</a></td>
-          <td class="tag_name translated">{{ tag.tag_name|capitalize }} &rArr; {{ tag.tag_name|trans }}</td>
+          <td class="tag_name translated">{{ tag.tag_name }} &rArr; {{ tag.tag_name|humanize|trans }}</td>
           <td class="tag_description">{{ tag.tag_description }}</td>
           <td class="tag_description translated">{{ tag.tag_description|trans }}</td>
         </tr>
