improved translation and formatting

--- a/Template/default/admin/edit.contact.twig
+++ b/Template/default/admin/edit.contact.twig
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/admin.min.css' }}" />
   {% endif %}
 {% endblock stylesheet %}
-{% block title %}{{ 'Contact Administration - Create or edit contact'|trans }}{% endblock %}
+{% block title %}{{ 'Create or edit contact'|trans }}{% endblock %}
 {% block jquery %}
   {{ parent() }}
   <script type="text/javascript" src="{{ MANUFAKTUR_URL }}/CKEditor/Source/ckeditor.js"></script>
