--- a/Template/default/admin/list.contact.twig
+++ b/Template/default/admin/list.contact.twig
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/admin.min.css' }}" />
   {% endif %}
 {% endblock stylesheet %}
-{% block title %}{{ 'Contact Administration - Extra fields'|trans }}{% endblock %}
+{% block title %}{{ 'Contacts'|trans }}{% endblock %}
 
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->  
