--- a/Template/default/admin/select.contact.twig
+++ b/Template/default/admin/select.contact.twig
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/admin.min.css' }}" />
   {% endif %}
 {% endblock stylesheet %}
-{% block title %}{{ 'Contact Administration - Tags'|trans }}{% endblock %}
+{% block title %}{{ 'Select contact type'|trans }}{% endblock %}
 
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->
