--- a/Template/default/admin/edit.extra.twig
+++ b/Template/default/admin/edit.extra.twig
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/admin.min.css' }}" />
   {% endif %}  
 {% endblock stylesheet %}
-{% block title %}{{ 'Contact Administration - Extra fields'|trans }}{% endblock %}
+{% block title %}{{ 'Create or edit extra field'|trans }}{% endblock %}
 
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->
