--- a/Template/default/admin/list.title.twig
+++ b/Template/default/admin/list.title.twig
@@ -23,14 +23,14 @@
     <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL ~ '/Contact/Template/default/css/admin.min.css' }}" />
   {% endif %}
 {% endblock stylesheet %}
-{% block title %}{{ 'Contact Administration - Categories'|trans }}{% endblock %}
+{% block title %}{{ 'Titles'|trans }}{% endblock %}
 
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->
   <div class="container{% if usage != 'framework'%}-fluid{% endif %}">
     {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} only %}
     <div class="height-15"></div>
-    <h1>{{ 'Title list'|trans }}</h1>
+    <h1>{{ 'Titles'|trans }}</h1>
     <div class="text-right">
       <a class="btn btn-default" role="button" href="{{ FRAMEWORK_URL ~ route.create }}">{{ 'Add a new title'|trans }}</a>
     </div>
