--- a/Template/default/pattern/form.fields.horizontal.twig
+++ b/Template/default/pattern/form.fields.horizontal.twig
@@ -159,7 +159,7 @@
   {% spaceless %}  
   <select class="form-control" {{ block('widget_attributes') }}{% if multiple %} multiple="multiple"{% endif %}>
       {% if empty_value is not none and not read_only %}
-          <option value=""{% if required and value is empty %} selected="selected"{% endif %}>{{ empty_value|trans({}, translation_domain) }}</option>
+          <option value=""{% if required and value is empty %} selected="selected"{% endif %}>{{ empty_value|humanize|trans({}, translation_domain) }}</option>
       {% endif %}
       {% if preferred_choices|length > 0 %}
           {% set options = preferred_choices %}
