--- a/Template/default/css/admin.css
+++ b/Template/default/css/admin.css
@@ -54,6 +54,11 @@ legend {
   color: #dcdcdc;
 }
 
+.form-horizontal .form-group {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 /*
   Wrapper for the about dialog
 */
