--- a/Template/default/admin/edit.extra.twig
+++ b/Template/default/admin/edit.extra.twig
@@ -30,7 +30,7 @@
   <!-- {{ _self.getTemplateName() }} -->
   <div class="container{% if usage != 'framework'%}-fluid{% endif %}">
     
-    {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} %}
+    {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar,usage:extra.usage} %}
     
     <h2>{{ 'Edit extra field'|trans }}</h2>
     {% include '@phpManufaktur/Contact/Template/default/pattern/admin/simple/edit.extra.twig' %}
