--- a/Template/default/admin/list.tag.twig
+++ b/Template/default/admin/list.tag.twig
@@ -28,7 +28,7 @@
 {% block content %}
   <!-- {{ _self.getTemplateName() }} -->
   <div class="container{% if usage != 'framework'%}-fluid{% endif %}">
-    {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} only %}
+    {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar,usage:extra.usage} only %}
     <div class="height-15"></div>
     <div class="text-right">
       <a class="btn btn-default" role="button" href="{{ FRAMEWORK_URL ~ route.create }}">{{ 'Add a new tag'|trans }}</a>
