--- a/Template/default/admin/select.contact.twig
+++ b/Template/default/admin/select.contact.twig
@@ -30,7 +30,7 @@
   <!-- {{ _self.getTemplateName() }} -->
   <div class="container{% if usage != 'framework'%}-fluid{% endif %}">
     
-    {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} %}
+    {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar,usage:extra.usage} %}
     
     <h2>{{ 'Select contact type'|trans }}</h2>
     
