--- a/Template/default/admin/toolbar.twig
+++ b/Template/default/admin/toolbar.twig
@@ -1,8 +1,9 @@
 {% block toolbar %}
   <ul class="nav nav-tabs">
+    {% set default_link = FRAMEWORK_URL ~ '/admin/contact/about' %}
     {% for item in toolbar %}
       <li{% if item.active %} class="active"{% endif %}>
-        <a href="{{ item.link }}" title="{{ item.hint|trans }}">
+        <a href="{{ item.link ~ '?usage=' ~ usage }}" title="{{ item.hint|trans }}">
           {%if item.name == 'contact_list' %}
             <i class="fa fa-users"></i>
           {% elseif item.name == 'contact_edit' %}
@@ -21,6 +22,14 @@
           {% endif %}
         </a>
       </li>
+      {% if item.active %}
+        {% set default_link = item.link %}
+      {% endif %}
     {% endfor %}
+    {% if usage is defined and usage != 'framework' %}
+      <li>
+        <a class="kitframework-icon" href="{{ default_link }}" title="{{ 'Open the Contact extension in kitFramework'|trans }}" target="_blank"><i class="fa fa-puzzle-piece"></i></a>
+      </li>
+    {% endif %}
   </ul>
 {% endblock toolbar %}
